--- a/smart_home_tng/components/pyscript/translations/de.json
+++ b/smart_home_tng/components/pyscript/translations/de.json
@@ -3,7 +3,7 @@
     "step": {
       "user": {
         "title": "Pyscript",
-        "description": "Wenn Sie einen Eintrag erstellt haben, lesen Sie die [Dokumentation](https://hacs-pyscript.readthedocs.io/en/latest/), um zu erfahren, wie Sie Skripte und Funktionen erstellen können.",
+        "description": "Wenn du einen Eintrag erstellt hast, lese die [Dokumentation](https://hacs-pyscript.readthedocs.io/en/latest/), um zu erfahren, wie du Skripte und Funktionen erstellen kannst.",
         "data": {
           "allow_all_imports": "Alle Importe zulassen?",
           "shc_is_global": "Zugriff auf Smart Home Conttroller als globale Variable?"
@@ -27,7 +27,7 @@
       }
     },
     "abort": {
-      "no_ui_configuration_allowed": "## Keine UI-Konfiguration erlaubt\nDieser Eintrag wurde über **configuration.yaml** erstellt, daher müssen alle Konfigurationsparameter dort aktualisiert werden. Mit dem Dienst [**pyscript.reload**](/developer-tools/service) können Sie die Änderungen in der Datei **configuration.yaml** übernehmen, ohne Ihre Smart-Home-Instanz neu zu starten.",
+      "no_ui_configuration_allowed": "## Keine UI-Konfiguration erlaubt\nDieser Eintrag wurde über **configuration.yaml** erstellt, daher müssen alle Konfigurationsparameter dort aktualisiert werden. Mit dem Dienst [**pyscript.reload**](/developer-tools/service) kannst du die Änderungen in der Datei **configuration.yaml** übernehmen, ohne deinen Smart Home Controller neu zu starten.",
       "no_update": "## Keine Aktualisierung erforderlich\nEs gibt nichts zu aktualisieren."
     }
   }
